# C_plus_plus_1

./: .gitignore
qt/Casting/: CMakeLists.txt  dynamic.h  main.cpp
qt/Container/: CMakeLists.txt  main.cpp
qt/Ex1_Pincinato/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
qt/Ex2/: CMakeLists.txt  calculater.cpp  calculater.h  main.cpp
qt/Ex2/Ex3/: CMakeLists.txt  main.cpp  montecarlo.cpp  montecarlo.h
qt/Macros_Templates/: CMakeLists.txt  main.cpp
qt/SmartPointer/: CMakeLists.txt  auto_ptr.h  main.cpp
qt/Stack/: CMakeLists.txt  main.cpp  stack.h
qt/build-Casting-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Casting.cbp  Makefile  cmake_install.cmake
qt/build-Container-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Container.cbp  Makefile  cmake_install.cmake
qt/build-Ex1_Pincinato-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Ex1_Pincinato.cbp  Makefile  cmake_install.cmake
qt/build-Ex2-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Ex2.cbp  Makefile  cmake_install.cmake
qt/build-First_Program-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  First_Program.cbp  Makefile  cmake_install.cmake
qt/build-Macros_Templates-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Macros_Templates.cbp  Makefile  cmake_install.cmake
qt/build-SmartPointer-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Makefile  SmartPointer.cbp  cmake_install.cmake
qt/build-Stack-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Makefile  Stack.cbp  cmake_install.cmake
qt/ex10/: CMakeLists.txt  main.cpp  sharedptr.h  (+1 more)
qt/ex3/: CMakeLists.txt  ex3.cpp  ex3.h  ex3_2.cpp  ex3_2.h  main.cpp
qt/ex6/: CMakeLists.txt  abc.h  account.cpp  account.h  checkingaccount.cpp  checkingaccount.h  ex2_4.h  main.cpp
qt/ex7/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  shape.cpp  shape.h  square.cpp  square.h  triangle.cpp  triangle.h
(+68 files in other folders)
